<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/scan"
            android:textSize="@dimen/checkbox_text_size" />

        <Button
            android:id="@+id/stopscan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/stopscan"
            android:textSize="@dimen/checkbox_text_size" />
        <Button
            android:id="@+id/disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="断开连接"
            android:textSize="@dimen/checkbox_text_size" />

        <!--      <Button
                android:id="@+id/sendCMD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sendCMD"
                android:textSize="@dimen/checkbox_text_size" />

            <Button
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/help"
                android:textSize="@dimen/checkbox_text_size" /> -->
    </LinearLayout>

    <ListView
        android:id="@+id/blelist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ivory"> <!-- android:background="@color/ivory" -->
    </ListView>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ivory"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="name:" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text=" mac:" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                    </LinearLayout>
            </LinearLayout>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/turn_off_light"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/turnOffLight"
                android:textSize="@dimen/checkbox_text_size" />

            <!--<Button-->
            <!--android:id="@+id/S1703_version"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/s1703_version"-->
            <!--android:textSize="@dimen/checkbox_text_size" />-->
            <Button
                android:id="@+id/S1703_MAC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/s1703_mac"
                android:textSize="@dimen/checkbox_text_size" />

            <Button
                android:id="@+id/S1701_MAC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/s1701_mac"
                android:textSize="@dimen/checkbox_text_size" />
            <Button
                android:id="@+id/S1705_MAC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="S1705/06查询版本号"
                android:textSize="@dimen/checkbox_text_size" />


        </LinearLayout>




        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/key_on"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/s1703turnOn"
                    android:textSize="@dimen/checkbox_text_size" />

                <Button
                    android:id="@+id/key_off"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/s1703turnOff"
                    android:textSize="@dimen/checkbox_text_size" />
                <Button
                    android:id="@+id/red_twinkle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/redTwinkle"
                    android:textSize="@dimen/checkbox_text_size" />

                <Button
                    android:id="@+id/red_short"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/redShort"
                    android:textSize="@dimen/checkbox_text_size" />


            </LinearLayout>

            <LinearLayout
               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/red_long"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/redLong"
                    android:textSize="@dimen/checkbox_text_size" />
                <Button
                    android:id="@+id/green_twinkle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/greenTwinkle"
                    android:textSize="@dimen/checkbox_text_size" />

                <Button
                    android:id="@+id/green_short"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/greenShort"
                    android:textSize="@dimen/checkbox_text_size" />

                <Button
                    android:id="@+id/green_long"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/greenLong"
                    android:textSize="@dimen/checkbox_text_size" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/blue_twinkle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/blueTwinkle"
                    android:textSize="@dimen/checkbox_text_size" />

                <Button
                    android:id="@+id/blue_short"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/blueShort"
                    android:textSize="@dimen/checkbox_text_size" />

                <Button
                    android:id="@+id/blue_long"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/blueLong"
                    android:textSize="@dimen/checkbox_text_size" />
                <Button
                    android:id="@+id/whiteLong"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/whitheLong"
                    android:textSize="@dimen/checkbox_text_size" />

            </LinearLayout>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/edit_command"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/item_data_text_size" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/edit_button"
                android:textSize="@dimen/checkbox_text_size" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="command:" />

                <TextView
                    android:id="@+id/chara"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="data:" />

                <TextView
                    android:id="@+id/s1703_data"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="解析结果:" />

                <TextView
                    android:id="@+id/s1703_data_analyse"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="mac:" />

                <TextView
                    android:id="@+id/s1703_mac"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            <Button
                android:id="@+id/selectSure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="确认"
                android:textSize="@dimen/checkbox_text_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/macList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="19">

            <ListView
                android:id="@+id/datalist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/ivory"> <!-- android:background="@color/ivory" -->
            </ListView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>